[tool.poetry]
name = "requests-analyser"
version = "0.1.0"
description = "Tools for web requests analysis"
authors = ["Tim Preece <19146299+mrdoodles@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
